--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -127,7 +127,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = ""
+twitter = "evawyf"
 
 ############################
 ## Regional Settings
