--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "About"
+  name = "Home"
   url = "#about"
   weight = 10
 
@@ -40,3 +40,8 @@
 #   name = "CV"
 #   url = "media/resume.pdf"
 #   weight = 50
+
+[[main]]
+  name = "Hakuna Matata"
+  url = "https://www.elvawyf.com/"
+  weight = 100
